--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@ $(document).ready(function () {
 <div id="i-am-currently-going-to-school-in-smu" class="section level2">
 <h2>I am currently going to school in SMU</h2>
 <p>The other tabs represent work/ analyses that I have completed. Please check them out</p>
+<p>Shiny APP link : - <a href="https://mkimari1.shinyapps.io/Beer_app/" class="uri">https://mkimari1.shinyapps.io/Beer_app/</a></p>
 </div>
 </div>
 
