--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ $(document).ready(function () {
   <a href="CaseStudy.html">Case Study</a>
 </li>
 <li>
-  <a href="CaseStudy.html">Cas Study 2</a>
+  <a href="CaseStudy2.html">Cas Study 2</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
