--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@ $(document).ready(function () {
 <p>The other tabs represent work/ analyses that I have completed. Please check them out</p>
 <p>Shiny APP link : - <a href="https://mkimari1.shinyapps.io/Beer_app/" class="uri">https://mkimari1.shinyapps.io/Beer_app/</a></p>
 <p>Youtube video link: - <a href="https://www.youtube.com/watch?v=C86O7qvLV6g" class="uri">https://www.youtube.com/watch?v=C86O7qvLV6g</a></p>
+<p>Shiny APP For Attrition: - <a href="https://mkimari1.shinyapps.io/Attrition/" class="uri">https://mkimari1.shinyapps.io/Attrition/</a></p>
 </div>
 </div>
 
